# DCinfer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DConnx.sln  LICENSE  README.md  bootstrap.ps1  build_all_output.txt  build_dc.ps1  build_output.txt  build_output2.txt  build_test.bat  compile_commands.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
DCIr/: CMakeLists.txt
DCIr/include/Ir/: DcgArchive.h  GraphCompiler.h
DCIr/src/: DcgArchive.cpp  GraphCompiler.cpp
DCIr/test/: CMakeLists.txt  GraphCompilerTest.cpp
DCinfer/: CMakeLists.txt
DCinfer/DConnx/x64/test/: DConnx.exe.recipe
DCinfer/DConnx/x64/test/DConnx.tlog/: CL.command.1.tlog  link.command.1.tlog  link.secondary.1.tlog
DCinfer/include/Graph/: Connector.h  CoroScheduler.h  EngineRegistry.h  EnvRegistry.h  ErrorTracker.h  ExecutionEngine.h  GraphException.h  GraphStore.h  InferGraph.h  InputZone.h  OutputZone.h  SignalStore.h  ThreadPool.h
DCinfer/include/Infer/: EngineRegistry.h  Infer.h  InferNode.h  NativeTensor.h  Node.h  SlotType.h  TensorSlot.h  Value.h
DCinfer/include/Node/: Node.h  NodeException.h  NodeMods.h  SlotType.h  TensorSlot.h  Value.h
DCinfer/include/Node/internal/: CoroutineBridge.h  EngineAdapter.h  ExecutionPipeline.h  SignalGate.h  SlotWorkspace.h  TaskBuffer.h
DCinfer/include/Tensor/: NativeTensor.h  Tensor.hpp  TensorData.h  TensorException.h  TensorMeta.h  TensorSlot.h
DCinfer/include/Tools/: DCtype.h  Exception.h  Expected.h  tool.h
DCinfer/src/: Connector.cpp  CoroScheduler.cpp  CoroutineBridge.cpp  EngineAdapter.cpp  EngineRegistry.cpp  EnvRegistry.cpp  ExecutionEngine.cpp  ExecutionPipeline.cpp  GraphStore.cpp  InferGraph.cpp  InferNode.cpp  Node.cpp  SignalGate.cpp  SignalStore.cpp  SlotType.cpp  SlotWorkspace.cpp  TaskBuffer.cpp  Tensor.cpp  TensorData.cpp  TensorMeta.cpp  TensorSlot.cpp  ThreadPool.cpp
DCinfer/test/: CMakeLists.txt  ConnectorTest.cpp  EngineRegistryTest.cpp  EnvRegistryTest.cpp  GraphNodeTest.cpp  InferGraphTest.cpp  InferNodeTest.cpp  InferTest.cpp  NodeTest.cpp  TensorDataTest.cpp  TensorSlotTest.cpp  TensorTest.cpp  TestHarness.h
DConnx/: CMakeLists.txt  DConnx.vcxproj  DConnx.vcxproj.filters  InferOrt.cpp  README_debug_ort_session_crash.md  TensorSlot.h  TensorTest.cpp  test.cpp  test1.cpp
DConnx/API/: Infer.h  InferBase.h  InferOrt.h  Tensor.hpp  TensorMods.h  TensorOrt.h  Type.h  Value.h1  info.h  tensor.h  tool.h  vector.h
DConnx/DConnx/x64/test/: vc145.idb
DConnx/DConnx/x64/test/DConnx.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DConnx.lastbuildstate  link.read.1.tlog  link.write.1.tlog
DConnx/include/: DCtype.h  Expected.h  InferBase.h  TenosrViewImpl.h  TensorData.h  TensorException.h  TensorMeta.h  TensorSlot.h  tree.h
DConnx/include/Infer/: InferBase.h
DConnx/include/Tensor/: Tensor.hpp  TensorData.h  TensorException.h  TensorSlot.h
DConnx/include/Tools/: Expected.h
DConnx/src/: Bool.cpp  Float.cpp  Infer.cpp  InferBase.cpp  InferOrt.cpp  Int32.cpp  Int64.cpp  Tensor.cpp  TensorData.cpp  TensorMeta.cpp  TensorMods.cpp  TensorOrt.cpp  TensorSlot.cpp  Value.cpp  info.cpp  tensor.cpp
DConnx/test/: CMakeLists.txt  TensorDataTest.cpp  TensorSlotTest.cpp  TensorTest.cpp
engines/ort/: CMakeLists.txt
scripts/: build_onnxruntime.ps1  ort.build.json  ort.env.ps1
